--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ nav {
   color: #fff;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 nav .logo img {
   height: 50px;
@@ -27,14 +28,107 @@ nav .logo img {
 nav p {
   font-size: 24px;
   text-align: center;
-  width: 100%;
   margin-bottom: 0px;
+}
+nav a {
+  font-size: 20px;
+  margin-bottom: 0px;
+  padding-right: 5px;
+  color: #fff;
+  font-family: BentonSansRegular, sans-serif;
 }
 
 #app {
   margin: 0 auto;
   width: 80%;
   padding-top: 50px;
+}
+#app .current h1 {
+  text-decoration: underline;
+}
+#app .current #students {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+#app .current #students .student {
+  width: 30%;
+  padding: 20px 20px 20px 0px;
+}
+#app .current #students .student h2 {
+  color: #990000;
+  text-decoration: underline;
+}
+#app .current .btn-row {
+  margin: 20px 0px;
+}
+#app .current .btn-row button {
+  width: 200px;
+  height: 50px;
+  background-color: #006298;
+  color: #fff;
+  border-radius: 10px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+#app .add {
+  width: 50%;
+  margin: 0 auto;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+#app .add h1 {
+  text-decoration: underline;
+  margin-bottom: 20px;
+}
+#app .add .row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 30px 0px;
+}
+#app .add .row label {
+  font-weight: bold;
+  font-family: BentonSansRegular, sans-serif;
+  font-size: 16px;
+}
+#app .add .row input {
+  width: 250px;
+  height: 50px;
+  padding: 5px;
+  font-size: 16px;
+}
+#app .add .col {
+  display: flex;
+  flex-direction: column;
+}
+#app .add .col label {
+  font-weight: bold;
+  font-family: BentonSansRegular, sans-serif;
+  font-size: 16px;
+}
+#app .add .col input {
+  width: 100%;
+  height: 50px;
+  padding: 5px;
+  font-size: 16px;
+}
+#app .add .col p {
+  font-style: italic;
+  padding-top: 2px;
+}
+#app .add input[type=submit] {
+  width: 200px;
+  height: 50px;
+  background-color: #990000;
+  color: #fff;
+  border-radius: 10px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=styles.css.map */
