--- a/scss/body.scss
+++ b/scss/body.scss
@@ -2,4 +2,105 @@
     margin: 0 auto;
     width: 80%;
     padding-top: 50px;
+
+    .current{
+        h1{
+            text-decoration: underline;
+        }
+
+        #students{
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            
+            .student{
+                width: 30%;
+                padding: 20px 20px 20px 0px;
+
+                h2{
+                    color: #990000;
+                    text-decoration: underline;
+                }
+            }
+        }
+
+        .btn-row{
+            margin: 20px 0px;
+            button{
+                width: 200px;
+                height: 50px;
+                background-color: #006298;
+                color: #fff;
+                border-radius: 10px;
+                border: none;
+                font-size: 16px;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .add{
+        width: 50%;
+        margin: 0 auto;
+        padding-top: 100px;
+        padding-bottom: 100px;
+
+        h1{
+            text-decoration: underline;
+            margin-bottom: 20px;
+        }
+
+        .row{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin: 30px 0px;
+
+            label{
+                font-weight: bold;
+                font-family: BentonSansRegular, sans-serif;
+                font-size: 16px;
+            }
+
+            input{
+                width: 250px;
+                height: 50px;
+                padding: 5px;
+                font-size: 16px;
+            }
+            
+        }
+        .col{
+            display: flex;
+            flex-direction: column;
+            label{
+                font-weight: bold;
+                font-family: BentonSansRegular, sans-serif;
+                font-size: 16px;
+            }
+    
+            input{
+                width: 100%;
+                height: 50px;
+                padding: 5px;
+                font-size: 16px;
+            }
+            p{
+                font-style:italic;
+                padding-top: 2px;
+            }
+        }
+        input[type=submit]{
+            width: 200px;
+                height: 50px;
+                background-color: #990000;
+                color: #fff;
+                border-radius: 10px;
+                border: none;
+                font-size: 16px;
+                cursor: pointer;
+        }
+    }
 }
